<resources>
    <string name="app_name">StunBy</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_article">Article</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="preview_image">preview image</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="message_welcome_page">Want to learn Android, iOS, Machine Learning, Cloud, Front-End, Back-End, and other IT fields? Try Dicoding!</string>
    <string name="title_welcome_page">Welcome to StunBy!</string>
    <string name="title_signup_page">Fill in your details below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Log in to start monitoring your child\'s health and development today.
</string>
    <string name="title_login_page">Welcome to StunBy!</string>
    <string name="name">Name</string>
    <string name="message_main_page">Happy Learning at Dicoding.</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Log Out</string>
    <string name="story_image_desc">Story Image Description</string>
    <string name="add_story">Add Story</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="camera_x">Camera X</string>
    <string name="camera">Camera</string>
    <string name="empty_image_warning">Image is empty</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Log Out</string>
    <string name="hint_email">Enter Your Email</string>
    <string name="hint_weight">weight (kg)</string>
    <string name="hint_height">height (cm)</string>
    <string name="hint_password">Enter Your Password</string>
    <string name="hint_confirm_password">Confirm Your Password</string>
    <string name="password_validation">Password must be at least 8 characters</string>
    <string name="sukses_login">Sukses login</string>
    <string name="welcome_login">%1$swelcome</string>
    <string name="next">Next</string>
    <string name="Error">Error</string>
    <string name="hint_name">Enter Your Fullname</string>
    <string name="hint_dob">Enter your Date of Birth\"</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="label_gender">Gender</string>
    <string name="chart_title">chart_title</string>
    <string name="last_update">Last update</string>
    <string name="date">12 Desember 2024 (2 months 3 days)</string>
    <string name="kg">kg</string>
    <string name="value_weight">8,8</string>
    <string name="weight">Tinggi</string>
    <string name="height">Berat</string>
    <string name="galery">Galery</string>
    <string name="start_measurement">Start Measurement</string>
    <string name="preview_image_description">Preview Image</string>
    <string name="status">Status</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="arrow_icon">Arrow icon</string>
    <string name="settings">Settings</string>
    <string name="settings_icon">settings icon</string>
    <string name="my_profile">Profile</string>
    <string name="my_profile_icon">my profile icon</string>
    <string name="profile_picture">profile picture</string>
    <string name="security">Account Security</string>
    <string name="notification">Notification</string>
    <string name="recovery">Recovery</string>
    <string name="hint_age">Age</string>
    <string name="hint_date">Growth date</string>
    <string name="berat_numur">(BB/U)</string>
    <string name="berat_umur">Berat/Umur</string>
    <string name="tinggi_umur">Tinggi/Umur</string>
    <string name="berat_tinggi">Berat/Tinggi</string>


    <string name="level_aktivitas">%1$s</string>
    <string name="status_asi">%1$s</string>
    <string name="berat_bayi">%1$s kg</string>
    <string name="panjang_bayi">%1$s cm</string>
    <string name="z_score_bbtb">Z-Score BB/TB: %1$s</string>
    <string name="z_score_length">Z-Score Length: %1$s</string>
    <string name="z_score_weight">Z-Score Weight: %1$s</string>
    <string name="status_bbtb">Status BB/TB: %1$s</string>
    <string name="nutritional_status_weight">Status Gizi Berat: %1$s</string>
    <string name="nutritional_status_length">Status Gizi Panjang: %1$s</string>
    <string name="status_imt">Status IMT: %1$s</string>


    <string-array name="chart_types">
        <item>Berat Badan menurut Umur (BB/U)</item>
        <item>Tinggi Badan menurut Umur (TB/U)</item>
        <item>Berat Badan menurut Tinggi Badan (BB/TB)</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_bayi">: %String</string>
    <string name="v_gender">: %String</string>
    <string name="v_age">: %String</string>
    <string name="hint_activity">Aktifitas Level</string>
    <string name="hint_asi">Status ASI</string>
    <string name="hint_level">Aktifitas Level</string>

    <string-array name="aktivitas_level_options">
        <item>Rendah</item>
        <item>Sedang</item>
        <item>Aktif</item>
        <item>Sangat Aktif</item>
    </string-array>

    <string-array name="status_asi_options">
        <item>ASI Eksklusif</item>
        <item>ASI+MPASI</item>
        <item>MPASI</item>
    </string-array>

    <string-array name="food_options">
        <item>ASI (Air Susu Ibu)</item>
        <item>Susu Formula Bayi 0-6 bulan</item>
        <item>Susu Formula Lanjutan 6-12 bulan</item>
        <item>Bubur Susu Beras Merah</item>
        <item>Bubur Susu Beras Putih</item>
        <item>Pisang Lumat</item>
        <item>Pure Alpukat</item>
        <item>Pure Apel</item>
        <item>Pure Wortel</item>
        <item>SUN Nasi Tim Saring</item>
        <item>Bubur Ayam Saring</item>
        <item>Pure Kentang</item>
        <item>Pure Ubi Jalar Kuning</item>
        <item>Sup Bayam Saring</item>
        <item>Pure Labu Kuning</item>
        <item>Tim Ikan Giling</item>
        <item>Tim Hati Ayam</item>
        <item>Tim Daging Sapi Giling</item>
        <item>Bubur Kacang Hijau</item>
        <item>Pure Tofu</item>
        <item>Oatmeal Bayi (Oatmeal Hepi)</item>
        <item>Biskuit Bayi (promina)</item>
        <item>Pure Brokoli</item>
        <item>Sup Tahu Wortel</item>
        <item>Pure Edamame</item>
        <item>Bubur Sumsum</item>
        <item>Tim Telur</item>
        <item>Pure Jagung Manis</item>
        <item>Sup Makaroni Sayur</item>
        <item>Pure Kembang Kol</item>
        <item>Tim Udang</item>
        <item>Bubur Havermut Susu</item>
        <item>Pure Bit</item>
        <item>Sup Oyong</item>
        <item>Pure Pepaya</item>
        <item>Tim Tahu</item>
        <item>Pure Tempe</item>
        <item>Bubur Beras Merah Sayur</item>
        <item>Pure Labu Siam</item>
        <item>Tim Ikan Salmon</item>
        <item>Sup Cream Jagung</item>
        <item>Pure Kacang Polong</item>
        <item>Tim Ayam Cincang</item>
        <item>Pure Pare</item>
        <item>Bubur Beras Hitam</item>
        <item>Pure Terong</item>
        <item>Tim Ikan Dori</item>
        <item>Pure Bayam Merah</item>
        <item>Sup Tahu Telur</item>
        <item>Pure Kacang Merah</item>
        <item>Bubur Sagu</item>
        <item>Tim Ikan Gabus</item>
        <item>Bubur Singkong</item>
        <item>Pure Daun Katuk</item>
        <item>Bubur Jagung Manis</item>
        <item>Pure Labu Parang</item>
        <item>Tim Belut</item>
        <item>Bubur Ikan Salmon</item>
        <item>Pure Daun Mengkudu</item>
        <item>Tim Telur Puyuh</item>
        <item>Bubur Ubi Ungu</item>
        <item>Pure Daun Kelor</item>
        <item>Tim Kerang</item>
        <item>Pure Buah Naga Merah</item>
        <item>Bubur Gandum</item>
        <item>Pure Daun Singkong</item>
        <item>Tim Cumi-cumi</item>
        <item>Pure Daun Papaya</item>
        <item>Bubur Beras Merah Kacang Hijau</item>
        <item>Pure Mangga</item>
        <item>Bubur Pisang Keju</item>
        <item>Tumis Bayam dan Tahu</item>
        <item>Bubur Kacang Merah</item>
        <item>Tim Tempe Kedelai</item>
        <item>Pure Buah Bit dan Apel</item>
        <item>Bubur Jagung Manis dan Ayam</item>
    </string-array>

</resources>