<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.signup.SignupActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailEditTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:hintTextColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_baseline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameEditTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:hintTextColor="@color/colorPrimary"
                    app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
                    app:startIconDrawable="@drawable/ic_baseline_person_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_register_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dobEditTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:hintTextColor="@color/colorPrimary"
                    app:layout_constraintTop_toBottomOf="@+id/nameEditTextLayout"
                    app:startIconDrawable="@drawable/ic_baseline_calendar_today_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_register_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_dob"
                        android:focusable="false"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/genderLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_gender"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dobEditTextLayout" />

                <RadioGroup
                    android:id="@+id/genderRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/genderLabel">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/male" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordEditTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/colorPrimary"
                    app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPasswordEditTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/colorPrimary"
                    app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_register_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_confirm_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signupButton"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/signup"
                    app:cornerRadius="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditTextLayout" />

                <LinearLayout
                    android:id="@+id/signupContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signupButton">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Do you have an account?"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/loginText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Login"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/preview_image"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_stunby1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>